<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:minHeight="@dimen/Read_Reviews_Header">

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmentedControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="1dp"
        segmentedgroup:sc_corner_radius="5dp"
        segmentedgroup:sc_tint_color="#009688">

        <RadioButton
            android:id="@+id/button31"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Segment_Restaurant" />

        <RadioButton
            android:id="@+id/button32"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Segment_Event" />

        <RadioButton
            android:id="@+id/button33"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Segment_Recipe" />
    </info.hoang8f.android.segmented.SegmentedGroup>

</RelativeLayout>