<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yelp="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="44.0dip"
        android:theme="@style/IEATTAAppTheme.AppBarOverlay">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/leftBarButtonItem"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8.0dip"
                android:visibility="gone"
                android:text="@string/Back"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/abc_ic_ab_back_mtrl_am_alpha"
                android:layout_gravity="left|center_vertical"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="4dp"
                android:text="@string/App_Title"
                android:textSize="16.0dp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="4dp"
                android:text="@string/App_Subtitle"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/rightBarButtonItem"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="right|center_vertical"
                android:background="@color/transparent"
                android:text="Save"
                android:textColor="@color/white"/>
        </FrameLayout>


    </android.support.design.widget.AppBarLayout>

</merge>